# TranskribusInterfaces

./: Makefile  README.md  README.txt  pom.xml
src/eu/transkribus/interfaces/: IBaseLine2Coords.java  ICoords2BaseLine.java  IHtrDecoding.java  IHtrOm.java  IImageManipulator.java  Image.java
src/main/cpp/: .gitignore  CMakeLists.txt  CMakeUserSkel.cmake  IBaseLine2Coords.h  IBaseline2Polygon.h  IHtr.h  IImage.h  ILayoutAnalysis.h  IModule.h  IModuleDescription.h  ITrainHtr.h  IWriterRetrieval.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  Makefile  ModuleFactory.cpp  ModuleFactory.h  Utils.cmake
src/main/cpp/cmake/: Utils.cmake
src/main/cpp/example_plugin/: CMakeLists.txt  Makefile  MyLayoutAnalysis.cpp  MyLayoutAnalysis.h  testApp  testApp.cpp
src/main/cpp/test/: main.cpp
src/main/cpp/test1/: Makefile  MyLayoutAnalysis.cpp  MyLayoutAnalysis.h
src/main/cpp/test_image/: Makefile  main.cpp
src/main/cpp/writerretrieval_plugin/: CMakeLists.txt  MyWriterRetrieval.cpp  MyWriterRetrieval.h  testApp.cpp
src/main/java/eu/transkribus/interfaces/: IBaseLine2Coords.java  IBaseline2Polygon.java  ICoords2BaseLine.java  IDictionary.java  IEntry.java  IFeatureGenerator.java  IFeatureManipulator.java  IHtr.java  IHtrOm.java  IImageManipulator.java  IKeywordSpotter.java  ILangMod.java  ILayoutAnalysis.java  IModule.java  IModuleDescription.java  IPolygon2Baseline.java  IStringNormalizer.java  IText2Image.java  ITokenizer.java  ITrainHtr.java  Image.java  ModuleFactory.java  Region.java
src/main/java/eu/transkribus/interfaces/example_module/: MyLayoutAnalysis.java  MyModuleFactory.java
src/main/java/eu/transkribus/interfaces/example_plugin/: MyLayoutAnalysis.java  MyModuleFactory.java  package-info.java
src/main/java/eu/transkribus/interfaces/languageresources/: ILanguageResource.java  IPagewiseTextExtractor.java  ITextExtractor.java
src/main/java/eu/transkribus/interfaces/native_wrapper/: NativeBaseline2PolygonProxy.java  NativeHtrProxy.java  NativeLayoutAnalysisProxy.java  NativeModuleProxy.java  NativeProxyUtils.java  NativeTrainHtrProxy.java
src/main/java/eu/transkribus/interfaces/native_wrapper/swig/: Native_IBaseline2Coords.java  Native_IBaseline2Polygon.java  Native_IHtr.java  Native_ILayoutAnalysis.java  Native_IModule.java  Native_ITrainHtr.java  Native_Image.java  Native_ModuleFactory.java  SWIGTYPE_p_cv__Mat.java  SWIGTYPE_p_std__string.java  SWIGTYPE_p_void.java  StringVector.java  transkribus_interfaces.java  transkribus_interfacesJNI.java
src/main/java/eu/transkribus/interfaces/types/: Image.java  Region.java  Token.java
src/main/java/eu/transkribus/interfaces/types/util/: ImageConvertUtils.java  ImageUtils.java  SysPathUtils.java  TrpImageIO.java  TrpImgMdParser.java
src/main/java/eu/transkribus/interfaces/util/: HttpUtils.java  NativeLibRegistry.java  SysPathUtils.java  URLUtils.java
src/main/java/eu/transkribus/native_interfaces/: ILayoutAnalysis.java  IModuleDescription.java  Image.java  MyLayoutAnalysis.java  StringVector.java  transkribus_interfaces.java  transkribus_interfacesJNI.java
src/main/resources/: .gitignore  config.properties.example
src/main/swig/: .gitignore  Makefile  Makefile.Main  image.i  transkribus_interfaces.i  transkribus_interfaces_wrap.cxx
src/test/cpp/test/: ImageUtils.cpp  ImageUtils.h  Makefile  loadAndDisplayImage.cpp  test.cpp
src/test/java/: TestNativeInterfaces.java
src/test/java/eu/transkribus/interfaces/: ModuleFactoryTest.java
src/test/java/eu/transkribus/interfaces/native_wrapper/: NativeProxyUtilsTest.java  TestNativeInterfaces.java
src/test/java/eu/transkribus/interfaces/types/: ImageTest.java
src/test/java/eu/transkribus/interfaces/types/util/: SysPathUtilsTest.java
src/test/java/eu/transkribus/interfaces/util/: UrlUtilsTest.java
src/test/resources/: logback-test.xml
src/test/resources/img/page/: 035_320_001.xml
